# movietime_mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
src/movietime_mcp/: __init__.py  __main__.py  scraper.py  server.py
