[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "movietime-mcp"
version = "0.1.0"
description = "An MCP server that fetches movie showtimes from Fandango by location."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "muldercw" },
]
keywords = ["mcp", "fandango", "movies", "showtimes", "theaters"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
movietime-mcp = "movietime_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/movietime_mcp"]

[tool.movietime-mcp]
default_location = "10001"
